--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -4,13 +4,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
+<!--    <data>-->
 
-        <variable
-            name="adapter"
-            type="com.islamzada.project2.features.adapters.ProductListAdapter" />
+<!--        <variable-->
+<!--            name="adapter"-->
+<!--            type="com.islamzada.project2.features.adapters.ProductListAdapter" />-->
 
-    </data>
+<!--    </data>-->
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -37,28 +37,28 @@
                     android:id="@+id/product_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     tools:text="gg"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"/>
+                    android:layout_margin="5dp"
+                    android:padding="5dp"/>
 
                 <TextView
                     android:id="@+id/product_code"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     tools:text="gg"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"/>
+                    android:layout_margin="5dp"
+                    android:padding="5dp"/>
 
                 <TextView
                     android:id="@+id/product_detail"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="20dp"
+                    android:textSize="15dp"
                     tools:text="gg"
-                    android:layout_margin="10dp"
-                    android:padding="10dp"/>
+                    android:layout_margin="5dp"
+                    android:padding="5dp"/>
 
 
             </LinearLayout>
