--- a/app/src/main/res/layout/list_item_product.xml
+++ b/app/src/main/res/layout/list_item_product.xml
@@ -21,6 +21,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
             app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="#83B8E3"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -39,6 +40,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
                     tools:text="gg"
+                    android:textColor="@color/black"
                     android:layout_margin="5dp"
                     android:padding="5dp"/>
 
@@ -48,6 +50,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
                     tools:text="gg"
+                    android:textColor="@color/black"
                     android:layout_margin="5dp"
                     android:padding="5dp"/>
 
@@ -57,6 +60,7 @@
                     android:layout_height="wrap_content"
                     android:textSize="15dp"
                     tools:text="gg"
+                    android:textColor="@color/black"
                     android:layout_margin="5dp"
                     android:padding="5dp"/>
 
