--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -15,6 +15,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         tools:context=".features.newproduct.AddProductActivity">
 
         <LinearLayout
@@ -32,6 +33,8 @@
             <EditText
                 android:id="@+id/name"
                 android:text="@={viewModel.name}"
+                android:textColor="@color/black"
+                android:hint="Name"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -39,12 +42,16 @@
                 android:id="@+id/code"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
+                android:hint="Code"
                 android:inputType="number"
                 android:text="@={viewModel.code}" />
 
             <EditText
                 android:id="@+id/description"
                 android:text="@={viewModel.description}"
+                android:textColor="@color/black"
+                android:hint="Description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
@@ -55,6 +62,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
+            android:textColor="@color/white"
             android:text="@string/add_new_product"
             android:onClick="@{()->viewModel.onNewProductInsert()}"
             app:layout_constraintEnd_toEndOf="parent"
